2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (safe_strcmp), (get_data_from_hash_by_name),
	(read_icon_theme), (handle_change_signal), (update_theme_index),
	(gnome_theme_meta_info_compare):
	* gnome-theme-info.h: some more house-keeping

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (generate_theme_thumbnail_async):
	* theme-thumbnail.h: add a parameter to circumvent the internal
	thumbnail cache to the asynchronous generator

2007-05-30  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (safe_strcmp), (add_data_to_hash_by_name),
	(handle_change_signal), (update_common_theme_dir_index),
	(gtk2_dir_changed), (keybinding_dir_changed),
	(metacity_dir_changed), (common_theme_dir_changed),
	(common_icon_theme_dir_changed), (top_theme_dir_changed),
	(top_icon_theme_dir_changed), (real_add_top_theme_dir_monitor),
	(gnome_theme_info_find_by_type_helper),
	(gnome_theme_info_find_by_type),
	(gnome_theme_icon_info_find_all_helper),
	(gnome_theme_icon_info_find_all), (gnome_theme_icon_info_compare),
	(gnome_theme_meta_info_new),
	(gnome_theme_meta_info_find_all_helper),
	(gnome_theme_meta_info_find_all), (gnome_theme_meta_info_compare),
	(gnome_theme_info_register_theme_change): simplify, clean up, and fix
	a few leaks

2007-05-29  Jens Granseuer  <jensgr@gmx.net>

	* gtkrc-utils.c: (gtkrc_get_color_scheme): recognize both
	"gtk-color-scheme" and "gtk_color_scheme" (fixes thumbnail generation
	for e.g. the Mist metatheme)

2007-05-28  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c:
	* gconf-property-editor.h: remove property editor for the deprecated
	GtkOptionMenu, now that all users are upgraded to GtkComboBox

2007-05-28  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (generate_theme_thumbnail): drop unnecessary strlen
	(generate_theme_thumbnail_async): save some casts
	(generate_gtk_theme_thumbnail): don't leak the theme name

2007-05-25  Jens Granseuer  <jensgr@gmx.net>
